# dronecan-esp32-firmware

./: .gitignore  .gitmodules  CMakeLists.txt  readme.md  sdkconfig
.agent/: SKILL.md
.agent/workflows/: add-message.md  build-flash.md  create-firmware.md
components/bmp3_sensor_api/: CMakeLists.txt  bmp390.c  bmp390.h
components/dronecan_mini/: CMakeLists.txt  dronecan_accepter.c  dronecan_accepter.h  dronecan_communication.c  dronecan_communication.h  dronecan_dna_receiver.c  dronecan_node_state.c  dronecan_node_state.h  dronecan_receiver.c  dronecan_tasks.c  dronecan_tasks.h  dronecan_value_params.c  dronecan_value_params.h  firmware_update.c  firmware_update.h
components/dronecan_mini/messages/: uavcan.equipment.air_data.StaticPressure-1028.c  uavcan.equipment.air_data.StaticPressure-1028.h  uavcan.equipment.air_data.StaticTemperature-1029.c  uavcan.equipment.air_data.StaticTemperature-1029.h  uavcan.protocol.GetNodeInfo-1.c  uavcan.protocol.GetNodeInfo-1.h  uavcan.protocol.GetTransportStats-4.c  uavcan.protocol.GetTransportStats-4.h  uavcan.protocol.NodeStatus-341.h  uavcan.protocol.RestartNode-5.h  uavcan.protocol.dynamic_node_id.Allocation-1.c  uavcan.protocol.dynamic_node_id.Allocation-1.h  uavcan.protocol.file.BeginFirmwareUpdate-40.c  uavcan.protocol.file.BeginFirmwareUpdate-40.h  uavcan.protocol.file.Read-48.c  uavcan.protocol.file.Read-48.h  uavcan.protocol.param.ExecuteOpcode-10.c  uavcan.protocol.param.ExecuteOpcode-10.h  uavcan.protocol.param.GetSet-11.c  uavcan.protocol.param.GetSet-11.h
components/libcanard/: CMakeLists.txt
firmwares/esp32-airpressure/: CMakeLists.txt  partitions.csv  readme.md  sdkconfig  under-bmp390-holder.FCStd  under-can-holder.FCStd
firmwares/esp32-airpressure/main/: CMakeLists.txt  main.c  project_config.h
firmwares/esp32-airpressure/pcb-supermini-c3-bmp390/: fp-info-cache  fp-lib-table  pcb-blue-led-laser.lbrn2  pcb-supermini-c3-bmp390-Edge_Cuts.dxf  pcb-supermini-c3-bmp390-F_Cu.dxf  pcb-supermini-c3-bmp390-F_Mask.dxf  pcb-supermini-c3-bmp390.kicad_pcb  pcb-supermini-c3-bmp390.kicad_prl  pcb-supermini-c3-bmp390.kicad_pro  pcb-supermini-c3-bmp390.kicad_sch  sym-lib-table  symbols.kicad_sym
firmwares/esp32-airpressure/pcb-supermini-c3-bmp390/footprints.pretty/: BMP390_Module.kicad_mod  CAN_Module.kicad_mod
firmwares/esp32-gateway/: CMakeLists.txt  partitions.csv  sdkconfig
firmwares/esp32-gateway/main/: CMakeLists.txt  ap.html  cannelloni_bridge.c  cannelloni_bridge.h  dronecan_data_monitor.c  dronecan_data_monitor.h  dronecan_dna_server.c  dronecan_dna_server.h  dronecan_node_monitor.c  dronecan_node_monitor.h  http_server.c  http_server.h  main.c  project_config.h  sta.html  status.html  system.html  template.html  wifi_manager.c  wifi_manager.h
firmwares/esp32-gateway/main/web/: ap.html  common.js  monitor.css  monitor.html  monitor.js  nodes.css  nodes.html  nodes.js  sta.html  status.html  status.js  style.css  system.html  template.html
main/: CMakeLists.txt  app_tasks.c  app_tasks.h  dronecan_node.c  dronecan_node.h  main.c  project_config.h
main/helpers/: dronecan_accepter.c  dronecan_communication.c  dronecan_communication.h  dronecan_dna_receiver.c  dronecan_dna_receiver.h  dronecan_node_state.c  dronecan_node_state.h  dronecan_receiver.c  dronecan_receiver.h  dronecan_tasks.c  dronecan_tasks.h  dronecan_value_params.c  dronecan_value_params.h  esp_can.c  esp_can.h  firmware_update.c  firmware_update.h
main/messages/: uavcan.equipment.air_data.StaticPressure-1028.c  uavcan.equipment.air_data.StaticPressure-1028.h  uavcan.equipment.air_data.StaticTemperature-1029.c  uavcan.equipment.air_data.StaticTemperature-1029.h  uavcan.protocol.GetNodeInfo-1.c  uavcan.protocol.GetNodeInfo-1.h  uavcan.protocol.GetTransportStats-4.c  uavcan.protocol.GetTransportStats-4.h  uavcan.protocol.NodeStatus-341.c  uavcan.protocol.NodeStatus-341.h  uavcan.protocol.RestartNode-5.c  uavcan.protocol.RestartNode-5.h  uavcan.protocol.dynamic_node_id.Allocation-1.c  uavcan.protocol.dynamic_node_id.Allocation-1.h  uavcan.protocol.file.BeginFirmwareUpdate-40.c  uavcan.protocol.file.BeginFirmwareUpdate-40.h  uavcan.protocol.file.Read-48.c  uavcan.protocol.file.Read-48.h  uavcan.protocol.param.ExecuteOpcode-10.c  uavcan.protocol.param.ExecuteOpcode-10.h  uavcan.protocol.param.GetSet-11.c  uavcan.protocol.param.GetSet-11.h
